<resources>
    <string name="app_name">Semedicure</string>
    <string name="edit_email">Enter Email</string>
    <string name="edit_password">Enter Password</string>
    <string name="button_existinguser">Returning User</string>
    <string name="button_login">Login</string>
    <string name="button_newuser">Create New Account</string>
    <string name="button_newpatient">Patient</string>
    <string name="button_newadmin">Administrator</string>
    <string name="button_provider">Healthcare Provider</string>
    <string name="button_forgotpass">Forgot Password</string>
    <string name="button_resetpass">Reset Password</string>
    <string name="button_create">Create</string>
    <string name="button_clear">Clear</string>
    <string name="button_qr">Scan QR Code</string>
    <string name="button_requestAppt">Request Appointment</string>
    <string name="button_updateMed">View/Update Medical History</string>
    <string name="button_profile">Personal Information</string>
    <string name="button_currMed">Current Medications</string>
    <string name="button_apptHist">Appointment History</string>
    <string name="button_checkIn">Check in Patient</string>
    <string name="button_approveAppt">Approve Appt Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_findPatient">Find Patient</string>
    <string name="button_orderPres">Order Prescription</string>
    <string name="button_updateProfile">View/Update Profile</string>
    <string name="button_find">Find</string>
    <string name="button_orderNow">Order Now</string>
    <string-array name="login_dropdown">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Administrator</item>
    </string-array>
</resources>