<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUserActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView1"
        android:src="@drawable/bg1"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/button6"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="providerInfo"
        android:text="@string/button_provider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="280dp"
        android:onClick="patientInfo"
        android:text="@string/button_newpatient"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:onClick="adminInfo"
        android:text="@string/button_newadmin"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/amaranth"
        android:text="Please select the"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#22BCCF"
        android:textSize="42dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/amaranth"
        android:text="type of user"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#22BCCF"
        android:textSize="42dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

</androidx.constraintlayout.widget.ConstraintLayout>